--- a/app/src/main/res/layout/activity_user_selection.xml
+++ b/app/src/main/res/layout/activity_user_selection.xml
@@ -1,31 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/user_recycler_view"
+    android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
-    <TextView
+     />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/user_add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:text="USER SELECTION SCREEN" />
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_account_plus_white_24dp"
+        app:layout_anchor="@id/user_recycler_view"
+        app:layout_anchorGravity="bottom|right|end" />
 
-    <Button
-        android:id="@+id/user_selection_button_list_chooser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Go To Spelling List Chooser" />
-
-    <Button
-        android:id="@+id/user_selection_button_user_stats"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Go To Overall User Stats" />
-
-    <Button
-        android:id="@+id/user_selection_button_user_creation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Show user Creation Dialog" />
-
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
