--- a/app/src/main/res/layout/activity_word_list_chooser.xml
+++ b/app/src/main/res/layout/activity_word_list_chooser.xml
@@ -1,31 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/main_content_list_chooser"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
-    <TextView
+    android:layout_height="match_parent">
+
+
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/list_chooser_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/list_add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:text="word list chooser SCREEN" />
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_playlist_plus_white_24dp"
+        app:layout_anchor="@id/list_chooser_recycler_view"
+        app:layout_anchorGravity="bottom|right|end" />
 
-    <Button
-        android:id="@+id/list_chooser_button_user_selection"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Back to user selection" />
-
-    <Button
-        android:id="@+id/list_chooser_button_list_builder"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Go to spelling list builder" />
-
-    <Button
-        android:id="@+id/list_chooser_button_start_test"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Start Test" />
-
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
