--- a/app/src/main/res/layout/activity_tester.xml
+++ b/app/src/main/res/layout/activity_tester.xml
@@ -1,19 +1,32 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/activity_tester_main_content"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
-    <TextView
+    android:layout_height="match_parent">
+
+    <EditText
+        android:id="@+id/test_activity_input"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="24dp"
+        android:textSize="24dp"
+        android:inputType="textNoSuggestions|textVisiblePassword"
+        android:cursorVisible="false"
+        android:background="@null"
+        android:gravity="center_horizontal|center_vertical"/>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/say_word_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:text="Spelling List Tester Screen" />
-
-    <Button
-        android:id="@+id/tester_button_test_stats"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Move to test stats screen" />
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/baseline_record_voice_over_white_24"
+        app:layout_anchor="@id/test_activity_input"
+        app:layout_anchorGravity="bottom|right|end" />
 
 
-</LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
