--- a/app/src/main/res/layout/activity_word_list_builder.xml
+++ b/app/src/main/res/layout/activity_word_list_builder.xml
@@ -1,19 +1,27 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/main_content_list_builder"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical" >
-    <TextView
+    android:layout_height="match_parent">
+
+
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/word_list_builder_recycler_view"
+        android:scrollbars="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/word_add_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="24dp"
-        android:text="WORD LIST BUILDER SCREEN" />
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:src="@drawable/baseline_add_white_24"
+        app:layout_anchor="@id/word_list_builder_recycler_view"
+        app:layout_anchorGravity="bottom|right|end" />
 
-    <Button
-        android:id="@+id/list_builder_button_list_chooser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Back to Spelling List Chooser" />
-
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
